force-app/main/default/objects/KCS_Process_Review__c/KCS_Process_Review__c.object-meta.xml
<CustomObject>
    <description>Object which will be related to Case to let KCS Coaches review knowledge articles</description>
    <label>KCS Process Review</label>
    <nameField>
        <displayFormat>KCS-{0000}</displayFormat>
        <label>KCS Process Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCS Process Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>