force-app/main/default/objects/KCS_Process_Review__c/fields/Article_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Article_Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article Flagged</label>
    <type>Checkbox</type>
</CustomField>