force-app/main/default/objects/KCS_Process_Review__c/fields/Candidate_for_Article_Update__c.field-meta.xml
<CustomField>
    <fullName>Candidate_for_Article_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate for Article Update</label>
    <type>Checkbox</type>
</CustomField>