force-app/main/default/objects/KCS_Process_Review__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>KCS Process Reviews</relationshipLabel>
    <relationshipName>KCS_Process_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>