force-app/main/default/objects/KCS_Process_Review__c/fields/KCS_PII_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>KCS_PII_Review_Date__c</fullName>
    <label>KCS PII Review Date</label>
    <type>Date</type>
</CustomField>