force-app/main/default/objects/KCS_Process_Review__c/fields/KCS_Process_Worker__c.field-meta.xml
<CustomField>
    <fullName>KCS_Process_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KCS Process Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KCS_Process_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>